# biped2_ros

./: .gitignore  README.md  install_deps.sh
scripts/: stop_gazebo.sh  test_kinematics.py
src/biped2_description/: CMakeLists.txt  meshes  package.xml
src/biped2_description/config/: biped2_controllers.yaml
src/biped2_description/meshes/: LeftAnklePitch_Link.STL  LeftHipRoll_Link.STL  LeftHipYaw_Link.STL  LeftKneePitch_Link.STL  RightAnklePitch_Link.STL  RightHipRoll_Link.STL  RightHipYaw_Link.STL  RightKneePitch_Link.STL  base_link.STL
src/biped2_description/scripts/: resolve_mesh_paths.py
src/biped2_description/urdf/: biped2.urdf.xacro
src/biped2_gazebo/: CMakeLists.txt  package.xml
src/biped2_gazebo/launch/: biped2_gazebo.launch.py
src/biped2_gazebo/worlds/: empty.world
src/biped2_kinematics/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/biped2_kinematics/biped2_kinematics/: foot_fk_publisher.py  foot_lift_demo.py  foot_trajectory.py  pinocchio_leg_ik.py  urdf_utils.py
src/biped2_kinematics/scripts/: foot_fk_publisher  foot_lift_demo
